{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 46,
  "lineage": "30555d96-928e-a239-965d-80dc991db778",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07dbd3eb1793b8de0",
            "association_id": "eipassoc-011b9628867a543cd",
            "domain": "vpc",
            "id": "eipalloc-07dbd3eb1793b8de0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09e183534f923298c",
            "private_dns": "ip-10-0-1-26.ec2.internal",
            "private_ip": "10.0.1.26",
            "public_dns": "ec2-34-205-115-76.compute-1.amazonaws.com",
            "public_ip": "34.205.115.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "Elastic_ip"
            },
            "tags_all": {
              "name": "Elastic_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:908810579717:instance/i-03eb6f77982adbf84",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03eb6f77982adbf84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair-rits",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a08d9fe1e74fdc27",
            "private_dns": "ip-10-0-1-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09a7f2ebde3085a3d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fe5b9cd1b5f28c7",
            "tags": {
              "Name": "Ritushree-ec2"
            },
            "tags_all": {
              "Name": "Ritushree-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b30d2b565c3aaab"
            ]
          },
          "dependencies": [
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "int-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:internet-gateway/igw-0d7c98421023edaf4",
            "id": "igw-0d7c98421023edaf4",
            "owner_id": "908810579717",
            "tags": {
              "Name": "Int-gateway"
            },
            "tags_all": {
              "Name": "Int-gateway"
            },
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:908810579717:loadbalancer/app/app-lb/f0a4bf47293d122e",
            "arn_suffix": "app/app-lb/f0a4bf47293d122e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-454348782.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:908810579717:loadbalancer/app/app-lb/f0a4bf47293d122e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-010d3491b8c4e37e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a733e74b056137d3"
              },
              {
                "subnet_id": "subnet-0e36d22abf6bcecb7"
              }
            ],
            "subnets": [
              "subnet-0a733e74b056137d3",
              "subnet-0e36d22abf6bcecb7"
            ],
            "tags": {
              "Name": "rits-alb"
            },
            "tags_all": {
              "Name": "rits-alb"
            },
            "vpc_id": "vpc-006c986a51cf0e7c9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sec_grp",
            "aws_subnet.pr-sub1",
            "aws_subnet.pr-sub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:908810579717:listener/app/app-lb/f0a4bf47293d122e/b3a2fe8f0e2752d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:908810579717:targetgroup/alb-tg/68648f3afba0c9ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:908810579717:listener/app/app-lb/f0a4bf47293d122e/b3a2fe8f0e2752d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:908810579717:loadbalancer/app/app-lb/f0a4bf47293d122e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "Rits-alb"
            },
            "tags_all": {
              "Name": "Rits-alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_sec_grp",
            "aws_subnet.pr-sub1",
            "aws_subnet.pr-sub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:908810579717:targetgroup/alb-tg/68648f3afba0c9ca",
            "arn_suffix": "targetgroup/alb-tg/68648f3afba0c9ca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:908810579717:targetgroup/alb-tg/68648f3afba0c9ca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:908810579717:targetgroup/alb-tg/68648f3afba0c9ca-20231128135915672400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:908810579717:targetgroup/alb-tg/68648f3afba0c9ca",
            "target_id": "i-03eb6f77982adbf84"
          },
          "dependencies": [
            "aws_instance.website",
            "aws_lb_target_group.target_group",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07dbd3eb1793b8de0",
            "association_id": "eipassoc-011b9628867a543cd",
            "connectivity_type": "public",
            "id": "nat-07fe6d74846ffd5e0",
            "network_interface_id": "eni-09e183534f923298c",
            "private_ip": "10.0.1.26",
            "public_ip": "34.205.115.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09fe5b9cd1b5f28c7",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prb-routeTB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:route-table/rtb-0d0b4c64e15853273",
            "id": "rtb-0d0b4c64e15853273",
            "owner_id": "908810579717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07fe6d74846ffd5e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prb-routeTB1"
            },
            "tags_all": {
              "Name": "prb-routeTB1"
            },
            "timeouts": null,
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-routeTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:route-table/rtb-0b19fe59f285145cc",
            "id": "rtb-0b19fe59f285145cc",
            "owner_id": "908810579717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7c98421023edaf4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-routeTB"
            },
            "tags_all": {
              "Name": "pub-routeTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.int-gateway",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de48a37c005d0dc1",
            "route_table_id": "rtb-0b19fe59f285145cc",
            "subnet_id": "subnet-09fe5b9cd1b5f28c7"
          },
          "dependencies": [
            "aws_internet_gateway.int-gateway",
            "aws_route_table.pub-routeTB",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-prb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b3b456ff298642d",
            "route_table_id": "rtb-0d0b4c64e15853273",
            "subnet_id": "subnet-0a733e74b056137d3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.prb-routeTB1",
            "aws_subnet.pr-sub1",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association-prb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060f30b10b2697636",
            "route_table_id": "rtb-0d0b4c64e15853273",
            "subnet_id": "subnet-0e36d22abf6bcecb7"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.prb-routeTB1",
            "aws_subnet.pr-sub2",
            "aws_subnet.pub-sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002bfa7be272d610f",
            "route_table_id": "rtb-0b19fe59f285145cc",
            "subnet_id": "subnet-0fb38849f02720a7e"
          },
          "dependencies": [
            "aws_internet_gateway.int-gateway",
            "aws_route_table.pub-routeTB",
            "aws_subnet.pub-sub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:security-group/sg-010d3491b8c4e37e3",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010d3491b8c4e37e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sec_grp",
            "name_prefix": "",
            "owner_id": "908810579717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sec_grp"
            },
            "tags_all": {
              "Name": "alb_sec_grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:subnet/subnet-0a733e74b056137d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a733e74b056137d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "908810579717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub1"
            },
            "tags_all": {
              "Name": "private-sub1"
            },
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:subnet/subnet-0e36d22abf6bcecb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e36d22abf6bcecb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "908810579717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub2"
            },
            "tags_all": {
              "Name": "private-sub2"
            },
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:subnet/subnet-09fe5b9cd1b5f28c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe5b9cd1b5f28c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "908810579717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub1"
            },
            "tags_all": {
              "Name": "pub-sub1"
            },
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:subnet/subnet-0fb38849f02720a7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb38849f02720a7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "908810579717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub2"
            },
            "tags_all": {
              "Name": "pub-sub2"
            },
            "vpc_id": "vpc-006c986a51cf0e7c9"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:908810579717:vpc/vpc-006c986a51cf0e7c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056b4365569f0cde4",
            "default_route_table_id": "rtb-051db65d4feacdde9",
            "default_security_group_id": "sg-00b30d2b565c3aaab",
            "dhcp_options_id": "dopt-070e751f023b66e2b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006c986a51cf0e7c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051db65d4feacdde9",
            "owner_id": "908810579717",
            "tags": {
              "Name": "Ritushree-vpc"
            },
            "tags_all": {
              "Name": "Ritushree-vpc"
            }
          }
        }
      ]
    }
  ]
}